--- a/css/default.css
+++ b/css/default.css
@@ -13,6 +13,7 @@ button{
     padding:0;
     border:unset;
     background-color: transparent;
+    color:inherit;
     cursor: pointer;
 }
 ul{
@@ -21,6 +22,7 @@ ul{
     list-style-type: none;
 }
 a{
+    color:inherit;
     text-decoration: none;
 }
 dl,
