--- a/css/main.css
+++ b/css/main.css
@@ -10,7 +10,7 @@ header{
     display:flex;
     justify-content: space-between;
     width:100%;
-    background-color: tomato;
+    border-bottom:1px solid hsla(0, 0%, 71%, 1);
 }
 
 /* 로고 */
@@ -28,20 +28,38 @@ header{
     margin:1rem;
 }
 
-.heder-nav__menu{
+.header-nav__menu{
     position:fixed;
     top:0;
     right:0;
-    width:80%;
+    width:100%;
+    height:100%;
+    padding-top:8rem;
     background-color: hsla(225, 57%, 10%, 0.9);
-    transform: translateX(0);
+    transform: translateX(100%);
 }
 
-.heder-nav__menu li{
-    font-size: 1.6rem;
+.header-nav__menu li{
     border-bottom:1px solid hsla(225, 57%, 30%, 0.5);
-}
-
-.heder-nav__menu a{
+    font-size: 1.6rem;
     color:hsla(0, 0%, 100%, 1);
 }
+
+.header-nav__menu a{
+    display:block;
+    padding:1rem 2rem;
+}
+
+.header-nav__menu a:hover,
+.header-nav__menu a:focus{
+    background-color: hsla(224deg, 46%, 33%, 1);
+}
+
+.header-nav__button.close{
+    position: absolute;
+    top:1rem;
+    right:1rem;
+    font-size: 2.5rem;
+}
+
+/* 메인 */
