--- a/css/main.css
+++ b/css/main.css
@@ -4,9 +4,10 @@ header {
     position: fixed;
     justify-content: space-between;
     width: 100%;
+    border-bottom: 1px solid hsla(0, 0%, 71%, 1);
 }
 /* 로고 */
-.header__logo{
+.header__logo {
     margin: 1rem;
 }
 .header__logo>a img,
@@ -18,23 +19,35 @@ header {
     margin: 1rem;
 }
 
-.header-nav__menu{
+.header-nav__menu {
     position: fixed;
     top: 0;
     right: 0;
-    transform: translateX(0);
+    transform: translateX(100%);
     width: 100%;
+    height: 100%;
+    padding-top: 8rem;
     background: hsla(225, 57%, 10%, 0.9);
 }
-.header-nav__menu>li{
-    font-size: 1.6rem;
+.header-nav__menu>li {
     border-bottom: 1px solid hsla(225, 57%, 30%, 0.5);
-}
-
-.header-nav__menu>li>a{
     color: hsla(0, 0%, 100%, 1);
+    font-size: 1.6rem;
 }
-
+.header-nav__menu>li>a {
+    display: block;
+    padding: 1rem 2rem ;
+}
+.header-nav__menu>li>a:hover,
+.header-nav__menu>li>a:focus {
+    background: hsla(224deg, 46%, 33%, 1);
+}
+.header-nav__button.close{
+    position: absolute;
+    top: 1rem;
+    right: 1rem;
+    font-size: 3rem;
+}
 /* main 메뉴 */
 .main-juice{
     margin: 0 auto;
@@ -55,7 +68,3 @@ header {
     justify-content: center;
     align-items: center;
 }
-
-/* .main-juice__front>button>:nth-child(2){
-    display: block;
-} */
