--- a/css/main.css
+++ b/css/main.css
@@ -27,7 +27,7 @@ header {
     width: 100%;
     height: 100%;
     padding-top: 8rem;
-    background: hsla(225, 57%, 10%, 0.9);
+    background: hsla(225deg, 57%, 10%, 0.9);
 }
 .header-nav__menu>li {
     border-bottom: 1px solid hsla(225, 57%, 30%, 0.5);
@@ -48,23 +48,37 @@ header {
     right: 1rem;
     font-size: 3rem;
 }
-/* main 메뉴 */
-.main-juice{
+/* 메인 */
+main{
     margin: 0 auto;
     width: 95%;
+    padding-top: 5rem;
 }
-
+/* 세션 쥬스 */
+.main-juice {
+    padding-top: 3rem;
+    width: 100%;
+    max-width: 840px;
+    margin: 0 auto;
+}
 .main-juice-container {
     display: flex;
     flex-flow: row wrap;
+    justify-content: space-between;
 }
 
 .main-juice-container__item{
-    width: 50%;
+    width: 48%;
 }
-
-.main-juice-container__item{
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.main-juice__front>button {
+    width: 100%;
+    background: hsla(0, 0%, 96%, 1);
+}
+.main-juice__front>button>img {
+    width: 100%;
+    max-width: 328px;
+}
+.main-juice__front>button>span {
+    display: block;
+    font-size: 1.8rem;
 }
