--- a/css/default.css
+++ b/css/default.css
@@ -13,7 +13,6 @@ button{
     padding:0;
     border:unset;
     background-color: transparent;
-    cursor: inherit;
     cursor: pointer;
 }
 ul{
@@ -34,9 +33,14 @@ dd{
 /* 기본 문서 설정 */
 html {
     font-size: 10px;
+    
 }
 body {
     font-family: 'Noto Sans KR', sans-serif;
     color: hsla(0, 0%, 0%, 1);
+
+}
+body * {
+    box-sizing: border-box;
 }
 
