--- a/css/main.css
+++ b/css/main.css
@@ -50,7 +50,7 @@ header {
 }
 /* 메인 */
 main{
-    margin: 0 auto;
+    margin: 0 auto; 
     width: 95%;
     padding-top: 5rem;
 }
@@ -68,8 +68,10 @@ main{
 }
 
 .main-juice-container__item{
-    width: 48%;
     position: relative;
+    margin-bottom: 2rem;
+    width: 48%;
+    
 }
 /* 앞면 */
 .main-juice__front>button {
@@ -82,8 +84,8 @@ main{
 }
 .main-juice__front>button>span {
     display: block;
-    font-size: 1.8rem;
     padding-bottom: 2rem;
+    font-size: 1.8rem;
 }
 /* 뒷면 */
 .main-juice__back{
@@ -91,18 +93,23 @@ main{
     top: 0;
     left: 0;
     width: 100%;
-    padding: 4rem 0 2rem;
+    height: 100%;
+    padding-top: 4rem;
     background: hsla(0, 0%, 100%, 0.6);
 
 }
 .main-juice__back-item {
-    padding: 0 2rem ;
+    padding: 1rem 2rem ;
+}
+/* 뒷면 위 */
+.main-juice__back-item.up {
+    height: 70%;
 }
 .main-juice__back-item.up>dt{
     padding-bottom: 2rem;
+    border-bottom: 2px solid hsla(67deg, 4%, 13%, 1);
     font-size: 1.8rem;
     color: hsla(67deg, 3%, 13%, 1);
-    border-bottom: 2px solid hsla(67deg, 4%, 13%, 1);
 
 }
 .main-juice__back-item.up>dt>span:last-child {
@@ -114,10 +121,53 @@ main{
     display: block;
 }
 .main-juice__back-item.up>dd {
-    font-size: 1.6rem;
-    color: hsla(0, 0, 0, 1);
     padding-top: 2rem;
+    font-size: 1.6rem;
+    color: hsla(0, 0%, 0%, 1);
 }
+/* 뒤면 아랫부분 */
 .main-juice__back-item.down {
+    display: flex;
+    flex-flow: row wrap;
+    height: 30%;
     background: hsla(0, 0%, 97%, 1);
+    font-size: 1.3rem;
+    color: hsla(0, 0%, 0%, 1);
+}
+.main-juice__back-item.down dt,
+.main-juice__back-item.down dd {
+    width: 25%;
+    padding-bottom: .5rem;
+    vertical-align: middle;
+
+}
+.main-juice__back-item.down>dt {
+    padding-left: 2rem;
+}
+.main-juice__back-item.down>:nth-child(3),
+.main-juice__back-item.down>:nth-child(4),
+.main-juice__back-item.down>:nth-child(9),
+.main-juice__back-item.down>:nth-child(10)
+{
+    order: 1;
+}
+.main-juice__back-item.down>:nth-child(5),
+.main-juice__back-item.down>:nth-child(6),
+.main-juice__back-item.down>:nth-child(11),
+.main-juice__back-item.down>:nth-child(12)
+{
+    order: 2;
+}
+
+.main-juice__back-item.down>:nth-child(2),
+.main-juice__back-item.down>:nth-child(4),
+.main-juice__back-item.down>:nth-child(6){
+    border-right: 1px solid hsla(0, 0%, 67%, 1);
+}
+
+.main-juice__back>button {
+    position: absolute;
+    top: 0;
+    right: 0;
+    padding: 1.5rem;
 }
