--- a/css/default.css
+++ b/css/default.css
@@ -13,11 +13,7 @@ button{
     padding:0;
     border:unset;
     background-color: transparent;
-<<<<<<< HEAD
     color:inherit;
-=======
-    cursor: inherit;
->>>>>>> 1e98c3596322be405971404f17e9f2d3e26626ae
     cursor: pointer;
 }
 ul{
@@ -28,10 +24,7 @@ ul{
 a{
     color:inherit;
     text-decoration: none;
-<<<<<<< HEAD
-=======
     color:inherit;
->>>>>>> 1e98c3596322be405971404f17e9f2d3e26626ae
 }
 dl,
 dt,
@@ -46,5 +39,8 @@ html {
 body {
     font-family: 'Noto Sans KR', sans-serif;
     color: hsla(0, 0%, 0%, 1);
+}
+body *{
+    box-sizing: border-box;
 }
 
